# LEDit

./: .air.toml  .gitignore  .releaserc.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  go.mod  go.sum  main.go  main_test.go  package-lock.json  package.json  playwright.config.ts  renovate.json  tsconfig.json
client/: pyproject.toml
server/: go.mod  manage.py  pyproject.toml  test.py
server-py/: pyproject.toml
server-py/ledit/: admin.py  asgi.py  consumers.py  models.py  routing.py  settings.py  urls.py  views.py  wsgi.py
server-py/ledit/migrations/: 0001_initial.py  0003_generalsettings_height_generalsettings_width.py  0004_video_generalsettings_videos.py  0005_delete_cyrptotracker_delete_devicesettings_and_more.py
server-py/ledit/render/: icon_utils.py
server-py/ledit/submodels/: device_settings.py  f1.py  homeassitant.py  image.py  radarr.py  render.py  untapped.py  video.py
server-py/ledit/templates/: base.html  index.html
server-py/ledit/themes/: f1.py  untapped.py
server-py/tests/: tests_index.py
server/cmd/ledit/: main.go
server/internal/datasource/: datasource.go  f1.go  homeassistant.go  image.go  radarr.go  sonarr.go  untappd.go  video.go  weather.go
server/internal/ent/: client.go  ent.go  f1.go  f1_create.go  f1_delete.go  f1_query.go  f1_update.go  generalsettings.go  generalsettings_create.go  generalsettings_delete.go  generalsettings_query.go  generalsettings_update.go  homeassistant.go  homeassistant_create.go  homeassistant_delete.go  homeassistant_query.go  homeassistant_update.go  image.go  image_create.go  image_delete.go  image_query.go  image_update.go  mutation.go  radarr.go  radarr_create.go  radarr_delete.go  radarr_query.go  radarr_update.go  runtime.go  sonarr.go  sonarr_create.go  sonarr_delete.go  sonarr_query.go  sonarr_update.go  untappd.go  untappd_create.go  untappd_delete.go  untappd_query.go  untappd_update.go  video.go  (+9 more)
server/internal/ent/enttest/: enttest.go
server/internal/ent/f1/: where.go
server/internal/ent/generalsettings/: generalsettings.go  where.go
server/internal/ent/homeassistant/: where.go
server/internal/ent/hook/: hook.go
server/internal/ent/image/: where.go
server/internal/ent/predicate/: predicate.go
server/internal/ent/radarr/: where.go
server/internal/ent/runtime/: runtime.go
server/internal/ent/schema/: generalsettings.go  sonarr.go  video.go
server/internal/ent/video/: where.go
server/internal/server/: handlers.go  server.go  websocket.go
server/ledit/: admin.py  asgi.py  consumers.py  icon_utils.py  models.py  render_model.py  routing.py  settings.py  singleton_model.py  themes.py  urls.py  views.py
server/ledit/migrations/: 0001_initial.py  0002_delete_sitesettings.py  0002_generalsettings_random_alter_generalsettings_f1_and_more.py  0002_remove_generalsettings_images_alter_image_image_and_more.py  0003_generalsettings_height_generalsettings_width.py  0003_rename_leditsettings_generalsettings.py  0004_devicesettings_f1settings_homeassistantsettings_and_more.py  0005_generalsettings_images.py
server/ledit/submodels/: sonarr.py  wheater.py
server/ledit/templates/: index.html
server/ledit/themes/: default.py  themes.py
server/tests/: tests_index.py
(+318 files in other folders)
