[project]
name = "ledit"
version = "0.1.0"
description = "A LED matrix infotainment system server"
authors = [{ name = "Martyn van Dijke", email = "martijnvdijke600@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "channels[daphne]>=4.1.0,<5",
    "django-cors-headers>=4.3.1,<5",
    "django-filer>=3.1.1,<4",
    "django-bootstrap5~=23.4",
    "djangorestframework>=3.15.1,<4",
    "homeassistant-api>=5",
    "pyarr>=5.2.0,<6",
    "untappd>=0.5,<0.6",
    "icalendar>=7.1.2,<8",
    "django>=5.1.7",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.3.0,<5",
    "invoke>=2.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
