[tool.poetry]
name = "ledit-server"
version = "0.1.0"
description = "A LED matrix infotainment system server"
authors = ["Martyn van Dijke <martijnvdijke600@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-cors-headers = "^4.3.1"
django-filer = "^3.1.1"
django-bootstrap5 = "^23.4"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"
pytest = "^8.0.0"
django-debug-toolbar = "^4.3.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
